# imrule

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  TODOS.md  cliff.toml  install.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
.imrule/: AGENTS.md  imrule.toml
benches/: rules_concat.rs
src/: lib.rs  main.rs
src/application/: apply_use_case.rs  clear_use_case.rs  init_use_case.rs  mcp_use_case.rs  mod.rs  ports.rs  revert_use_case.rs  skills_add_use_case.rs
src/domain/: agent.rs  config.rs  constants.rs  error.rs  mcp.rs  mod.rs  rules.rs  skills.rs  subagent.rs
src/infrastructure/: agent_writer.rs  config_loader.rs  file_system.rs  gitignore.rs  mcp_storage.rs  mcp_storage_openhands_toml.rs  mcp_storage_toml.rs  mod.rs  skill_fetcher.rs  skills.rs  subagents.rs  vscode_settings.rs
src/interface/: cli.rs  cli_adapter.rs  mod.rs
test-e2e/: .gitignore  claude_desktop_config.json
test-e2e-skills/fixture-local-source/skills/another-skill/: SKILL.md
test-e2e-skills/fixture-local-source/skills/sample-skill/: SKILL.md
test-e2e/.imrule/: imrule.toml  instructions.md  mcp.json
test-e2e/.ruler/: ruler.toml
tests/: agent_layer_contract.rs  architecture_contract.rs  clear_coverage_contract.rs  cli_release_contract.rs  config_fs_rules_contract.rs  mcp_command_contract.rs  mcp_native_apply_contract.rs  mcp_paths_settings_contract.rs  scaffold_contract.rs  skills_subagents_apply_clear_contract.rs  skills_subagents_apply_revert_contract.rs
