[package]
name = "imrule"
version = "0.1.0"
edition = "2021"
description = "ImRule — apply the same rules to all coding agents"
license = "MIT"
repository = "https://github.com/soapbird/imrule"
homepage = "https://github.com/soapbird/imrule"
readme = "README.md"
rust-version = "1.80"
keywords = ["ai", "developer-tools", "codex", "claude", "rules"]
categories = ["command-line-utilities", "development-tools"]
include = ["/src/**/*.rs", "/tests/**/*.rs", "/Cargo.toml", "/Cargo.lock", "/README.md", "/LICENSE"]

[[bin]]
name = "imrule"
path = "src/main.rs"

[lib]
name = "imrule"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9.42"
toml = "0.8"
thiserror = "1"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"

[package.metadata.imrule]
release-channel = "native-rust"
breaking-change = "typescript-npm-runtime-removed"
