[package]
name = "imrule"
version = "0.1.0"
edition = "2021"
description = "ImRule — apply the same rules to all coding agents"
license = "MIT"
repository = "https://github.com/soapbird/imrule"
homepage = "https://github.com/soapbird/imrule"
readme = "README.md"
rust-version = "1.85"
keywords = ["ai", "developer-tools", "codex", "claude", "rules"]
categories = ["command-line-utilities", "development-tools"]
include = ["/src/**/*.rs", "/tests/**/*.rs", "/benches/**/*.rs", "/Cargo.toml", "/Cargo.lock", "/README.md", "/LICENSE"]

[[bin]]
name = "imrule"
path = "src/main.rs"

[lib]
name = "imrule"
path = "src/lib.rs"

[dependencies]
# clap ~4.5 keeps clap_lex on edition-2021 (1.0.x); clap 4.6+ pulls clap_lex 1.1+ which requires Rust 1.85
clap = { version = "~4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9.42"
toml = "0.8"
toml_edit = "0.22"
thiserror = "1"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = "1"
clap_complete = "4"
clap_mangen = "0.2"

[dev-dependencies]
assert_cmd = "2"
criterion = "0.5"

[[bench]]
name = "rules_concat"
harness = false
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[package.metadata.imrule]
release-channel = "native-rust"
breaking-change = "typescript-npm-runtime-removed"
